feat: fix inputs
refs: no-issue#0

--- a/templates/build:prepare.yml
+++ b/templates/build:prepare.yml
@@ -1,3 +1,8 @@
+spec:
+  inputs:
+    stage:
+      default: '.prepare'
+---
 variables:
   __HAS_PHP_CLASSES__: "false"
   __HAS_FRONTEND_BUILD__: "false"
