--- a/templates/build:extension:frontend.yml
+++ b/templates/build:extension:frontend.yml
@@ -1,5 +1,10 @@
+spec:
+  inputs:
+    stage:
+      default: 'build'
+---
 build:extension:frontend:
-  stage: build
+  stage: $[[ inputs.stage ]]
   rules:
     - if: $CI_COMMIT_TAG
       when: never
