--- a/templates/build:extension:frontend.yml
+++ b/templates/build:extension:frontend.yml
@@ -5,6 +5,7 @@ spec:
 ---
 build:extension:frontend:
   stage: $[[ inputs.stage ]]
+  needs: ["build:prepare"]
   rules:
     - if: $CI_COMMIT_TAG
       when: never
