--- a/templates/build-prepare.yml
+++ b/templates/build-prepare.yml
@@ -7,9 +7,10 @@ build:prepare:
   stage: $[[ inputs.stage ]]
   image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/bash:5-alpine3.19
   rules:
-    - if: $CI_DEPLOY_FREEZE == null && $CI_COMMIT_TAG != null && $CI_PIPELINE_SOURCE != "schedule"
-    - if: $CI_PIPELINE_SOURCE == "schedule"
-      when: never
+    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_REF_NAME != 'release'
+    - if: $CI_COMMIT_REF_NAME == 'release'
   tags:
     - docker
   script:
