--- a/templates/build-prepare.yml
+++ b/templates/build-prepare.yml
@@ -13,6 +13,8 @@ build:prepare:
     - if: $CI_COMMIT_REF_NAME == 'release'
   tags:
     - docker
+  before_script:
+    - apk add --no-cache jq
   script:
     - |
       echo "NODE_VERSION=$(cat .nvmrc)" > build.env
