--- a/templates/build-extension-frontend.yml
+++ b/templates/build-extension-frontend.yml
@@ -17,7 +17,7 @@ build:extension:frontend:
   tags:
     - docker
   before_script:
-    apt-get update && apt-get install -y jq
+    apk add --nocache jq git
   script:
     - |
       if [ -f "package.json" ] || [ -d "Build" ]; then
