fix: ci dockerimpage version
refs: no-issue#0

--- a/templates/build-extension-backend.yml
+++ b/templates/build-extension-backend.yml
@@ -13,7 +13,7 @@ build:extension:backend:
     - if: $CI_COMMIT_REF_NAME != 'release'
     - if: $CI_COMMIT_REF_NAME == 'release'
       when: never
-  image: registry.moselwal.io/devops/images/php/$PHP_VERSION/ci
+  image: registry.moselwal.io/devops/images/php/$PHP_VERSION/ci/php-ci
   tags:
     - docker
   script:
