--- a/templates/build-prepare.yml
+++ b/templates/build-prepare.yml
@@ -5,7 +5,7 @@ spec:
 ---
 build:prepare:
   stage: $[[ inputs.stage ]]
-  image: bash:5-alpine3.19
+  image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/bash:5-alpine3.19
   rules:
     - if: $CI_COMMIT_TAG
     - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
