fix: debug frontend build
refs: no-issue#0

--- a/templates/build-extension-frontend.yml
+++ b/templates/build-extension-frontend.yml
@@ -31,6 +31,9 @@ build:extension:frontend:
       npm run build
       cd -
     - |
+      pwd
+      ls -la
+      echo $CI_PROJECT_DIR
       git add ./Resources/Public
       if ! git status --porcelain | grep -E "^"; then
         echo "Build artifacts are up to date."
