--- a/templates/build-extension-frontend.yml
+++ b/templates/build-extension-frontend.yml
@@ -16,6 +16,7 @@ build:extension:frontend:
   image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/node:$NODE_VERSION-alpine3.19
   tags:
     - docker
+  allow_failure: true
   before_script:
     apk add --no-cache jq git
   script:
