--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,25 @@
+#  Moselwal Digitalagentur Build Tools
+#    Copyright (C) 2024  Moselwal Digitalagentur GmbH, Kai Ole Hartwig <support@moselwal.de>
+#
+#  This program is free software: you can redistribute it and/or modify
+#    it under the terms of the GNU General Public License as published by
+#    the Free Software Foundation, either version 3 of the License, or
+#    (at your option) any later version.
+#
+#    This program is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GNU General Public License for more details.
+#
+#    You should have received a copy of the GNU General Public License
+#    along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
 stages: [build, test, release]
 
-#include:
-#  - component: ${CI_SERVER_HOST}/${CI_PROJECT_PATH}/build:prepare@$CI_COMMIT_SHA
-#  - component: ${CI_SERVER_HOST}/${CI_PROJECT_PATH}/build:extension:backend@$CI_COMMIT_SHA
-#  - component: ${CI_SERVER_HOST}/${CI_PROJECT_PATH}/build:extension:frontend@$CI_COMMIT_SHA
-#  - component: ${CI_SERVER_HOST}/${CI_PROJECT_PATH}/build:site:backend@$CI_COMMIT_SHA
-#  - component: ${CI_SERVER_HOST}/${CI_PROJECT_PATH}/build:site:test:backend@$CI_COMMIT_SHA
+#TODO: Add Tests
 
 include:
   - component: ${CI_SERVER_HOST}/devops/ci-cd-components/release-tools/semantic-release@1.0.6
     inputs:
       stage: release
 
-#create-release:
-#  stage: release
-#  image: registry.moselwal.io/devops/release-cli/release-cli:latest
-#  rules:
-#    - if: $CI_COMMIT_TAG
-#  script: echo "Creating release $CI_COMMIT_TAG"
-#  release:
-#    tag_name: $CI_COMMIT_TAG
-#    description: "Release $CI_COMMIT_TAG of components repository $CI_PROJECT_PATH"
