--- a/templates/build-extension-backend.yml
+++ b/templates/build-extension-backend.yml
@@ -1,23 +1,60 @@
+#  Moselwal Digitalagentur Build Tools
+#    Copyright (C) 2024  Moselwal Digitalagentur GmbH, Kai Ole Hartwig <support@moselwal.de>
+#
+#  This program is free software: you can redistribute it and/or modify
+#    it under the terms of the GNU General Public License as published by
+#    the Free Software Foundation, either version 3 of the License, or
+#    (at your option) any later version.
+#
+#    This program is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GNU General Public License for more details.
+#
+#    You should have received a copy of the GNU General Public License
+#    along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
 spec:
   inputs:
     stage:
       default: 'build'
+      description: "The stage in the CI/CD pipeline where this job will run.  "
+    rules-config:
+      description: "Configuration rules that determine when the job should run."
+      type: array
+      default:
+        - if: $CI_COMMIT_TAG
+          when: never
+        - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+        - if: $CI_COMMIT_REF_NAME != 'release'
+        - if: $CI_COMMIT_REF_NAME == 'release'
+          when: never
+    image-config:
+      # TODO: Refactor and use Semantic Versioning
+      description: "The Docker image to use for the job. This should use semantic versioning."
+      default: "registry.moselwal.io/devops/images/php/$PHP_VERSION/ci:latest"
+    tags-config:
+      description: "Tags used to select specific runners to execute the job."
+      type: array
+      default:
+        - docker
+    additional-script-begin:
+      description: "Add additional Script at the beginning of the Script."
+      default: ''
+    additional-script-end:
+      description: "Add additional Script at the end of the Script."
+      default: ''
 ---
 build:extension:backend:
   stage: $[[ inputs.stage ]]
   needs: ["build:prepare"]
-  rules:
-    - if: $CI_COMMIT_TAG
-      when: never
-    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
-    - if: $CI_COMMIT_REF_NAME != 'release'
-    - if: $CI_COMMIT_REF_NAME == 'release'
-      when: never
-  image: registry.moselwal.io/devops/images/php/$PHP_VERSION/ci:latest
-  tags:
-    - docker
+  rules: $[[ inputs.rules-config ]]
+  image: $[[ inputs.image-config | expand_vars ]]
+  tags: $[[ inputs.tags-config ]]
   script:
+    - $[[ inputs.additional-script-begin ]]
     - composer install --no-interaction -o -a -vvv
+    - $[[ inputs.additional-script-end ]]
   artifacts:
     untracked: true
     when: always
