--- a/templates/build-extension-backend/template.yml
+++ b/templates/build-extension-backend/template.yml
@@ -23,12 +23,10 @@ spec:
       description: "Configuration rules that determine when the job should run."
       type: array
       default:
-        - if: $CI_COMMIT_TAG
+        - if: $CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == 'release'
           when: never
-        - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
-        - if: $CI_COMMIT_REF_NAME != 'release'
-        - if: $CI_COMMIT_REF_NAME == 'release'
-          when: never
+        - if: ($CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS == null) || $CI_PIPELINE_SOURCE == 'merge_request_event'
+        - when: never
     image-config:
       # TODO: Refactor and use Semantic Versioning
       description: "The Docker image to use for the job. This should use semantic versioning."
