--- a/templates/build-prepare/template.yml
+++ b/templates/build-prepare/template.yml
@@ -23,10 +23,8 @@ spec:
       description: "Configuration rules that determine when the job should run."
       type: array
       default:
-        - if: $CI_COMMIT_TAG
-        - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
-        - if: $CI_COMMIT_REF_NAME != 'release'
-        - if: $CI_COMMIT_REF_NAME == 'release'
+        - if: ($CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS == null) || $CI_PIPELINE_SOURCE == 'merge_request_event' || $CI_COMMIT_TAG
+        - when: never
     image-config:
       description: "The Docker image to use for the job. This should use semantic versioning."
       default: "${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/bash:5-alpine3.19"
@@ -55,10 +53,10 @@ build:prepare:
       RED='\033[0;31m'
       NC='\033[0m'
       # Set default values
-      NODE_VERSION=${NODE_VERSION:-"12"}
+      NODE_VERSION=${NODE_VERSION:-"20"}
       WEB_DIR=${WEB_DIR:-"public"}
-      TYPO3_VERSION=${TYPO3_VERSION:-"^10.4"}
-      PHP_VERSION=${PHP_VERSION:-"7.4"}
+      TYPO3_VERSION=${TYPO3_VERSION:-"^12.4"}
+      PHP_VERSION=${PHP_VERSION:-"8.3"}
 
       # Read values from files if they exist
       if [ -f ".nvmrc" ]; then
@@ -67,8 +65,8 @@ build:prepare:
 
       if [ -f "composer.json" ]; then
         WEB_DIR=$(jq -r '.extra["typo3/cms"]["web-dir"] // "public"' composer.json)
-        TYPO3_VERSION=$(jq -r '.require["typo3/cms-core"] // "^10.4"' composer.json | tr '\n' ' ' | awk '{for(i=1;i<=NF;i++) if($i > max) max=$i} END {print max}')
-        PHP_VERSION=$(jq -r '.config.platform.php // "7.4"' composer.json)
+        TYPO3_VERSION=$(jq -r '.require["typo3/cms-core"] // "^12.4"' composer.json | tr '\n' ' ' | awk '{for(i=1;i<=NF;i++) if($i > max) max=$i} END {print max}')
+        PHP_VERSION=$(jq -r '.config.platform.php // "8.3"' composer.json)
       fi
 
       echo "NODE_VERSION=${NODE_VERSION}" > build.env
@@ -76,28 +74,6 @@ build:prepare:
       echo "TYPO3_VERSION=${TYPO3_VERSION}" >> build.env
       echo "PHP_VERSION=${PHP_VERSION}" >> build.env
 
-      echo -e "${RED}__HAS_PHP_CLASSES__ is obsolete, will be removed in next Version ${NC}"
-      if [ -d "Classes" ]; then
-        echo "Found PHP-Classes."
-        export __HAS_PHP_CLASSES__="true"
-      else
-        echo "No PHP-Classes."
-        export __HAS_PHP_CLASSES__="false"
-      fi
-      
-      echo -e "${RED}__HAS_FRONTEND_BUILD__ is obsolete, will be removed in next Version ${NC}"
-      if [ -f "package.json" ] || [ -d "Build" ]; then
-        echo "Found FE-Build"
-        export __HAS_FRONTEND_BUILD__="true"
-      else
-        echo "No FE-Build"
-        export __HAS_FRONTEND_BUILD__="false"
-      fi
-      
-      # Export and reuse it in next jobs
-      # Jobs need to add this job in the needs-Section
-      echo "__HAS_PHP_CLASSES__=${__HAS_PHP_CLASSES__}" >> build.env
-      echo "__HAS_FRONTEND_BUILD__=${__HAS_FRONTEND_BUILD__}" >> build.env
     - $[[ inputs.additional-script-end ]]
   artifacts:
     reports:
