--- a/templates/build-site-test-backend/template.yml
+++ b/templates/build-site-test-backend/template.yml
@@ -23,9 +23,8 @@ spec:
       description: "Configuration rules that determine when the job should run."
       type: array
       default:
-        - if: $CI_DEPLOY_FREEZE == null && $CI_COMMIT_TAG != null && $CI_PIPELINE_SOURCE != "schedule"
-        - if: $CI_PIPELINE_SOURCE == "schedule"
-          when: never
+        - if: $CI_DEPLOY_FREEZE == null && $CI_COMMIT_TAG != null
+        - when: never
     image-config:
       # TODO: Refactor and use Semantic Versioning
       description: "The Docker image to use for the job. This should use semantic versioning."
