--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,4 +22,16 @@ include:
   - component: ${CI_SERVER_HOST}/devops/ci-cd-components/release-tools/semantic-release@1.7.2
     inputs:
       stage: release
+      rules-config:
+        - if: $CI_COMMIT_REF_PROTECTED == "true"
+          changes:
+            - CHANGELOG.md
+          when: never
+        - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+          changes:
+            - .gitlab-ci.yml
+          when: always
+        - if: $CI_COMMIT_REF_PROTECTED == "true" && $CI_COMMIT_TAG == null
+        - when: never
+
 
