chore: update rules, only execute jobs if need files exists.
Refs: no-issue#0

--- a/templates/build-extension-backend/template.yml
+++ b/templates/build-extension-backend/template.yml
@@ -26,6 +26,9 @@ spec:
         - if: $CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == 'release'
           when: never
         - if: ($CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS == null) || $CI_PIPELINE_SOURCE == 'merge_request_event'
+          exists:
+            - composer.json
+            - ./**/composer.json
         - when: never
     image-config:
       # TODO: Refactor and use Semantic Versioning
