--- a/templates/build-extension-frontend/template.yml
+++ b/templates/build-extension-frontend/template.yml
@@ -26,6 +26,9 @@ spec:
         - if: $CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == 'release'
           when: never
         - if: ($CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS == null) || $CI_PIPELINE_SOURCE == 'merge_request_event'
+          exists:
+            - package.json
+            - ./**/package.yml
         - when: never
     image-config:
       description: "The Docker image to use for the job. This should use semantic versioning."
