--- a/templates/build-site-test-backend/template.yml
+++ b/templates/build-site-test-backend/template.yml
@@ -27,6 +27,13 @@ spec:
           exists:
             - composer.json
         - when: never
+    needs-config:
+      description: "Configure the jobs that needed to run this job."
+      type: array
+      default:
+        - job: build:prepare
+          optional: false
+          artifacts: true
     image-config:
       # TODO: Refactor and use Semantic Versioning
       description: "The Docker image to use for the job. This should use semantic versioning."
@@ -45,7 +52,7 @@ spec:
 ---
 build:site:test:backend:
   stage: $[[ inputs.stage ]]
-  needs: ["build:prepare"]
+  needs: $[[ inputs.needs-config ]]
   rules: $[[ inputs.rules-config ]]
   image: $[[ inputs.image-config | expand_vars ]]
   tags: $[[ inputs.tags-config ]]
