--- a/templates/build-extension-backend/template.yml
+++ b/templates/build-extension-backend/template.yml
@@ -30,6 +30,13 @@ spec:
             - composer.json
             - ./**/composer.json
         - when: never
+    needs-config:
+      description: "Configure the jobs that needed to run this job."
+      type: array
+      default:
+        - job: build:prepare
+          optional: false
+          artifacts: true
     image-config:
       # TODO: Refactor and use Semantic Versioning
       description: "The Docker image to use for the job. This should use semantic versioning."
@@ -48,7 +55,7 @@ spec:
 ---
 build:extension:backend:
   stage: $[[ inputs.stage ]]
-  needs: ["build:prepare"]
+  needs: $[[ inputs.needs-config ]]
   rules: $[[ inputs.rules-config ]]
   image: $[[ inputs.image-config | expand_vars ]]
   tags: $[[ inputs.tags-config ]]
